# TRustyBox-Telegram-Bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/bot/: command.rs  encrypt_type.rs  file_info.rs  get_file.rs  mod.rs  send_file.rs
src/bot/file_actions/: download.rs  get_file.rs  mod.rs  send_file.rs
src/bot/file_info/: get_history.rs  get_info.rs  mod.rs  send_info.rs
src/crypt/: aes_key.rs  base64_convert.rs  decryption.rs  encryption.rs
src/db/: get_info.rs  insert_to_db.rs  mod.rs
src/tools/: generate_uuid.rs  mod.rs  short_url.rs
src/types/: ecryption_state.rs  mod.rs  state.rs
