[package]
name = "trustybox_telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
teloxide-core = "0.9.1"
async-recursion = "1.0.4"
rand = "0.8.5"
uuid = "1.3.2"
mongodb = "2.5.0"
rand_core = "0.6.4"
aes = "0.8.2"
aes-gcm = "0.10.1"
base64 = "0.21.0"